--- a/python_blog/blog/templates/blog/contact.html
+++ b/python_blog/blog/templates/blog/contact.html
@@ -13,7 +13,7 @@
 
     <link rel="icon" type="image/png" href="https://www.flaticon.com/svg/static/icons/svg/1387/1387537.svg">
 
-    <title>Contact-Blog</title>
+    <title>Contact</title>
 </head>
 
 {#bootstrap button#}
@@ -89,7 +89,7 @@
 
             <div class="contact-items">
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/android/96/000000/facebook-new.png"/></div>
+                    <div class="icon"><img src="https://img.icons8.com/android/72/000000/facebook-new.png"/></div>
                     <div class="contact-info">
                         <a href="https://www.facebook.com/emilian.e.stoyanov/"><h1>Facebook</h1></a>
                         <h2>Welcome to mine Facebook</h2>
@@ -97,14 +97,14 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/ios-filled/96/000000/linkedin.png"/></div>
+                    <div class="icon"><img src="https://img.icons8.com/ios-filled/72/000000/linkedin.png"/></div>
                     <div class="contact-info">
                         <a href="https://www.linkedin.com/in/emilian-stoyanov-1aa7051ba/"><h1>Linkedin</h1></a>
                         <h2>Welcome to mine Linkedin</h2>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/ios-filled/96/000000/github.png"/></div>
+                    <div class="icon"><img src="https://img.icons8.com/ios-filled/72/000000/github.png"/></div>
                     <div class="contact-info">
                         <a href="https://github.com/EmilianStoyanov"><h1>GitHub</h1></a>
                         <h2>Welcome to mine GitHub</h2>
