--- a/python_blog/blog/templates/blog/about.html
+++ b/python_blog/blog/templates/blog/about.html
@@ -1,86 +1,80 @@
 {% extends 'blog/base.html' %}
 {% load static %}
 {% block body %}
-    {#    <!DOCTYPE html>#}
-    {#    <html lang="en">#}
-    {#    <title></title>#}
-    {#    <meta charset="UTF-8">#}
-    {#    <meta name="viewport" content="width=device-width, initial-scale=1">#}
-    {#    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">#}
-    {#    <link rel="stylesheet" href="">#}
-    {#    <style>#}
-    {##}
-    {##}
-    {#    </style>#}
-    {#    <body class="w3-light-blue w3-content" style="max-width:1000px">#}
-    {##}
-    {##}
-    {#    <!-- !PAGE CONTENT! -->#}
-    {#    <div class="w3-main" style="margin-left:100px">#}
-    {##}
-    {#        <!-- Push down content on small screens -->#}
-    {#        <div class="w3-hide-large" style="margin-top:83px"></div>#}
-    {##}
-    {#        <!-- Photo grid -->#}
-    {#        <div class="w3-row">#}
-    {#            <div class="w3-third">#}
-    {#                <img src="" style="width:100%" onclick="onClick(this)"#}
-    {#                     alt="">#}
-    {#                <img src="" style="width:100%" onclick="onClick(this)"#}
-    {#                     alt="">#}
-    {#                <img src="" style="width:100%" onclick="onClick(this)"#}
-    {#                     alt="">#}
-    {#            </div>#}
-    {##}
-    {#            <div class="w3-third">#}
-    {#                <img src="" style="width:100%" onclick="onClick(this)"#}
-    {#                     alt="">#}
-    {#                <img src="" style="width:100%" onclick="onClick(this)"#}
-    {#                     alt="">#}
-    {#                <img src="" style="width:100%" onclick="onClick(this)"#}
-    {#                     alt="">#}
-    {#            </div>#}
-    {#        </div>#}
-    {##}
-    {#        <!-- About section -->#}
-    {#        <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">#}
-    {#            <h4><b>About Me</b></h4>#}
-    {#            <img src="https://avatars0.githubusercontent.com/u/68276889?s=460&u=974da9914e8dc935bf0eb4fc8b776869618ef83e&v=4"#}
-    {#                 alt="Me" class="w3-image w3-padding-32" width="300" height="500">#}
-    {#            <div class="w3-content w3-justify" style="max-width:800px">#}
-    {#                <h4>My Name</h4>#}
-    {#                <p>Some text about me. I love taking photos of PEOPLE. I am lorem ipsum consectetur adipiscing elit, sed#}
-    {##}
-    {##}
-    {#                </p>#}
-    {#                <p>email: emilian.stoyanov@outlook.com</p>#}
-    {#                <p>tel: +359 884 80 32 57</p>#}
-    {##}
-    {#                <hr class="w3-opacity">#}
-    {#                <h4 class="w3-padding-16">Skills</h4>#}
-    {##}
-    {#                <p class="w3-wide">Python (Programming Language)</p>#}
-    {#                <div class="w3-white">#}
-    {#                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:95%">95%</div>#}
-    {#                </div>#}
-    {##}
-    {#                <p class="w3-wide">Object-Oriented Programming (OOP)</p>#}
-    {#                <div class="w3-white">#}
-    {#                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:85%">85%</div>#}
-    {#                </div>#}
-    {##}
-    {#                <p class="w3-wide">Django</p>#}
-    {#                <div class="w3-white">#}
-    {#                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>#}
-    {#                </div>#}
-    {#                <p class="w3-wide">Django</p>#}
-    {#                <div class="w3-white">#}
-    {#                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>#}
-    {#                </div>#}
-    {##}
-    {#            </div>#}
-    {#        </div>#}
-    {#    </div>#}
+    <!DOCTYPE html>
+    <html lang="en">
+    <title></title>
+    <meta charset="UTF-8">
+    <meta name="" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="">
+    <style>
+
+
+    </style>
+    <body class="w3-light-blue w3-content" style="max-width:1000px">
+
+
+    <!-- !PAGE CONTENT! -->
+    <div class="w3-main" style="margin-left:100px">
+
+        <!-- Push down content on small screens -->
+        <div class="w3-hide-large" style="margin-top:83px"></div>
+
+        <!-- Photo grid -->
+        <div class="w3-row">
+            <div class="w3-third">
+                <img src="" style="width:100%" onclick="onClick(this)"
+                     alt="">
+                <img src="" style="width:100%" onclick="onClick(this)"
+                     alt="">
+                <img src="" style="width:100%" onclick="onClick(this)"
+                     alt="">
+            </div>
+
+            <div class="w3-third">
+                <img src="" style="width:100%" onclick="onClick(this)"
+                     alt="">
+                <img src="" style="width:100%" onclick="onClick(this)"
+                     alt="">
+                <img src="" style="width:100%" onclick="onClick(this)"
+                     alt="">
+            </div>
+        </div>
+
+        <!-- About section -->
+        <div class="w3-container w3-animate-bottom w3-center w3-text-black w3-padding-32" id="about">
+            <h4><b>About Me</b></h4>
+            <img src="https://avatars0.githubusercontent.com/u/68276889?s=460&u=974da9914e8dc935bf0eb4fc8b776869618ef83e&v=4"
+                 alt="Me" class="w3-image w3-padding-32" width="200" height="400">
+            <div class="w3-content w3-justify" style="max-width:850px">
+                <h2>Emilian Stoyanov</h2>
+                <p>Some text about me. I love taking photos of PEOPLE. I am lorem ipsum consectetur adipiscing elit,
+                    sed</p>
+                <p>email: emilian.stoyanov@outlook.com</p>
+                <p>tel: +359 884 80 32 57</p>
+
+                <hr class="w3-opacity">
+                <h2 class="w3-padding-16">Skills</h2>
+
+                <p class="w3-wide">Python (Programming Language)</p>
+                <div class="w3-white">
+                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:95%">95%</div>
+                </div>
+                <br>
+
+                <p class="w3-wide">Object-Oriented Programming (OOP)</p>
+                <div class="w3-white">
+                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:85%">85%</div>
+                </div>
+                <br>
+                <p class="w3-wide">Django</p>
+                <div class="w3-white">
+                    <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
