--- a/python_blog/blog/templates/blog/news.html
+++ b/python_blog/blog/templates/blog/news.html
@@ -95,14 +95,17 @@
                 {#8#}
                 <img src="https://cdn57.androidauthority.net/wp-content/uploads/2019/08/Data-Science-Analysis-Working-1200x675.jpg"
                      alt="Croissant" style="width:100%">
-                <h2>How to write to a file in Python</h2>
-                <p style="font-family: Verdana,serif">
-                    <a href="https://hub.packtpub.com/how-to-write-to-a-file-in-python-txt-docx-csv-and-more-from-android-development-android-authority/">How
+                <h2><p style="color: #b77640">How to write to a file in Python</p></h2>
+                <p style="color: white">
+                    <a href="https://hub.packtpub.com/how-to-write-to-a-file-in-python-txt-docx-csv-and-more-from-android-development-android-authority/">
+                        How
                         to write to a file in Python — Txt, Docx, CSV, and more! from
-                        Android Development – Android Authority</a>
+                        Android Development – Android Authority
+                    </a>
                 </p>
             </div>
         </div>
+        {% block python_tricks %}{% endblock %}
 
     </div>
 
