--- a/python_blog/blog/static/blog/main.css
+++ b/python_blog/blog/static/blog/main.css
@@ -1,5 +1,7 @@
 body {
-    background-image: url("https://i.pinimg.com/originals/df/f1/55/dff15531f364a0a76b0e8d6cf64ee6b1.jpg");
+    /*background-image: url("https://i.pinimg.com/originals/df/f1/55/dff15531f364a0a76b0e8d6cf64ee6b1.jpg");*/
+    background-image: url("https://wallpaperaccess.com/full/1567666.png");
+
     margin-top: 7rem;
 }
 
