--- a/python_blog/blog/templates/blog/about.html
+++ b/python_blog/blog/templates/blog/about.html
@@ -73,6 +73,7 @@
                     <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
                 </div>
             </div>
+            {% block python_tricks %}{% endblock %}
         </div>
     </div>
 
