--- a/python_blog/blog/templates/blog/base.html
+++ b/python_blog/blog/templates/blog/base.html
@@ -71,9 +71,11 @@
     </nav>
     {% block body %}
     {% endblock %}
-
 </header>
+
 <main role="main" class="container">
+
+
 
     <div class="row">
         <div class="col-md-8">
@@ -89,8 +91,42 @@
             {% block content %}{% endblock %}
         </div>
 
+        {% block python_tricks %}
+            <div class="col-12 col-lg-4">
+            <div class="row">
+            <div class="col-12">
+            <div class="card mb-3 bg-secondary">
+            <form class="card-body" action="" method="post">
 
-    </div>
+
+                <div class="form-group">
+                    <p class="h5 text-muted text-center"></p>
+                    <p class="h3 text-center">🐍 Python Tricks</p>
+
+
+                    <div class="form-group">
+
+                        <p class="h5 text-muted text-center"></p>
+                        <p><img class="img-fluid rounded" src="https://programming-review.com/wp-content/uploads/2020/01/swapping-variables.jpg" width="738" height="490" alt="Python Tricks Dictionary Merge"></p>
+
+
+                        <p><img class="img-fluid rounded" src="https://i0.wp.com/gymnasiumismaning.de/wp-content/uploads/2019/10/pytrick-dict-merge.4201a0125a5e.png"
+                                width="738" height="490" alt="Python Tricks Dictionary Merge"></p>
+
+
+
+                        <p><img class="img-fluid rounded" src="https://pbs.twimg.com/media/EQ19bfQWsAAHh60?format=jpg&name=900x900"
+                                width="738" height="490" alt="Python Tricks Dictionary Merge"></p>
+
+
+                    </div>
+
+
+            </form>
+        {% endblock %}
+
+
+        </div>
 </main>
 
 
