change user password

--- a/python_blog/blog/templates/blog/about.html
+++ b/python_blog/blog/templates/blog/about.html
@@ -44,31 +44,32 @@
 
         <!-- About section -->
         <div class="w3-container w3-animate-bottom w3-center w3-text-black w3-padding-32" id="about">
-            <h4><b>About Me</b></h4>
+            <h4><b style="color: white">About Me</b></h4>
             <img src="https://avatars0.githubusercontent.com/u/68276889?s=460&u=974da9914e8dc935bf0eb4fc8b776869618ef83e&v=4"
                  alt="Me" class="w3-image w3-padding-32" width="200" height="400">
             <div class="w3-content w3-justify" style="max-width:850px">
-                <h2>Emilian Stoyanov</h2>
-                <p>Some text about me. I love taking photos of PEOPLE. I am lorem ipsum consectetur adipiscing elit,
+                <h2><p style="color: #ffffff">Emilian Stoyanov</p></h2>
+                <p style="color: white">Some text about me. I love taking photos of PEOPLE. I am lorem ipsum consectetur
+                    adipiscing elit,
                     sed</p>
-                <p>email: emilian.stoyanov@outlook.com</p>
-                <p>tel: +359 884 80 32 57</p>
+                <p style="color: white">email: emilian.stoyanov@outlook.com</p>
+                <p style="color: white">tel: +359 884 80 32 57</p>
 
                 <hr class="w3-opacity">
-                <h2 class="w3-padding-16">Skills</h2>
+                <h2 class="w3-padding-16"><p style="color: #ffffff">Skills</p></h2>
 
-                <p class="w3-wide">Python (Programming Language)</p>
+                <p class="w3-wide" style="color: white">Python (Programming Language)</p>
                 <div class="w3-white">
                     <div class="w3-container w3-padding-small w3-center w3-grey" style="width:95%">95%</div>
                 </div>
                 <br>
 
-                <p class="w3-wide">Object-Oriented Programming (OOP)</p>
+                <p class="w3-wide" style="color: white">Object-Oriented Programming (OOP)</p>
                 <div class="w3-white">
                     <div class="w3-container w3-padding-small w3-center w3-grey" style="width:85%">85%</div>
                 </div>
                 <br>
-                <p class="w3-wide">Django</p>
+                <p class="w3-wide" style="color: white">Django</p>
                 <div class="w3-white">
                     <div class="w3-container w3-padding-small w3-center w3-grey" style="width:80%">80%</div>
                 </div>
