--- a/python_blog/blog/templates/blog/contact.html
+++ b/python_blog/blog/templates/blog/contact.html
@@ -22,7 +22,7 @@
     {#bootstrap button#}
     <style type="text/css">
         .myButton {
-            background: #63b8ee linear-gradient(to bottom, #63b8ee 5%, #468ccf 100%);
+
             border-radius: 6px;
             border: 1px solid #3866a3;
             display: inline-block;
@@ -47,18 +47,11 @@
 
 
         body {
-
-            background-color: #cccccc;
-            /*background: #BC8F8F;*/
-            color: #333333;
             margin-top: 5rem;
         }
 
     </style>
     <body>
-    <div class="container">
-        <a href="{% url 'home-page' %}" class="myButton">Home</a>
-    </div>
 
 
     <h1 class="text-center" style="color: white">CONTACT FORM</h1>
@@ -92,25 +85,25 @@
 
                 <div class="contact-items">
                     <div class="contact-item">
-                        <div class="icon"><img src="https://img.icons8.com/android/72/000000/facebook-new.png"/></div>
+                        <div class="icon"><img src="https://img.icons8.com/bubbles/80/000000/facebook-f.png"/></div>
                         <div class="contact-info">
-                            <a href="https://www.facebook.com/emilian.e.stoyanov/"><h1>Facebook</h1></a>
-                            <h2>Welcome to mine Facebook</h2>
+                            <a href="https://www.facebook.com/emilian.e.stoyanov/"><h1 style="color: white">Facebook</h1></a>
+                            <h2 style="color: white">Welcome to mine Facebook</h2>
 
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="icon"><img src="https://img.icons8.com/ios-filled/72/000000/linkedin.png"/></div>
+                        <div class="icon"><img src="https://img.icons8.com/bubbles/83/000000/linkedin.png"/></div>
                         <div class="contact-info">
-                            <a href="https://www.linkedin.com/in/emilian-stoyanov-1aa7051ba/"><h1>Linkedin</h1></a>
-                            <h2>Welcome to mine Linkedin</h2>
+                            <a href="https://www.linkedin.com/in/emilian-stoyanov-1aa7051ba/"><h1 style="color: white">Linkedin</h1></a>
+                            <h2 style="color: white">Welcome to mine Linkedin</h2>
                         </div>
                     </div>
                     <div class="contact-item">
-                        <div class="icon"><img src="https://img.icons8.com/ios-filled/72/000000/github.png"/></div>
+                        <div class="icon"><img src="https://img.icons8.com/dusk/77/000000/github.png"></div>
                         <div class="contact-info">
-                            <a href="https://github.com/EmilianStoyanov"><h1>GitHub</h1></a>
-                            <h2>Welcome to mine GitHub</h2>
+                            <a href="https://github.com/EmilianStoyanov"><h1 style="color: white">GitHub</h1></a>
+                            <h2 style="color: white">Welcome to mine GitHub</h2>
                         </div>
                     </div>
                 </div>
@@ -118,18 +111,6 @@
         </section>
         <!-- End Contact Section -->
 
-
-        {#    <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">#}
-        {#        <i class="fa fa-facebook-official w3-hover-opacity"></i>#}
-        {#        <i class="fa fa-instagram w3-hover-opacity"></i>#}
-        {#        <i class="fa fa-snapchat w3-hover-opacity"></i>#}
-        {#        <i class="fa fa-pinterest-p w3-hover-opacity"></i>#}
-        {#        <i class="fa fa-twitter w3-hover-opacity"></i>#}
-        {#        <i class="fa fa-linkedin w3-hover-opacity"></i>#}
-        {#        <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"#}
-        {#                                           class="w3-hover-text-green">w3.css</a></p>#}
-        {#        <!-- End footer -->#}
-        {#    </footer>#}
     </div>
     </body>
     </html>
