--- a/python_blog/blog/templates/blog/news.html
+++ b/python_blog/blog/templates/blog/news.html
@@ -21,42 +21,46 @@
                 {#1#}
                 <img src="https://images.idgesg.net/images/article/2017/10/halloween2-dayofthedead-100740086-large.jpg"
                      alt="Sandwich" style="width:100%">
-                <h2>Pyston returns from the dead to speed Python</h2>
+                <h2><p style="color: #b77640">Pyston returns from the dead to speed Python</p></h2>
                 <p style="font-family: Verdana,serif">
+                <p style="color: white">
                     <a href="https://www.infoworld.com/article/3587591/pyston-returns-from-the-dead-to-speed-python.html">Picking
                         up where Dropbox left off, a new development team has
                         released a fresh version of the just-in-time optimizing...
-                    </a>.
+                    </a></p>
             </div>
 
             <div class="w3-quarter">
                 {#2#}
                 <img src="https://images.idgesg.net/images/article/2019/06/number-8_infinity-symbol_silver_8-tips_by-photo-by-doguhakan-getty-100799035-large.jpg"
                      alt="Steak" style="width:100%">
-                <h2>8 great little Python web frameworks</h2>
+                <h2><p style="color: #b77640">8 great little Python web frameworks</p></h2>
                 <p style="font-family: Verdana,serif">
+                <p style="color: white">
                     <a href="https://www.infoworld.com/article/3586120/8-great-little-python-web-frameworks.html">Small
                         is beautiful. Look to these Python web frameworks when you
-                        want speed and simplicity instead of feature sprawl...</a>
+                        want speed and simplicity instead of feature sprawl...</a></p>
             </div>
             <div class="w3-quarter">
                 {#3#}
                 <img src="https://i.redd.it/rxezjyf4ojx41.png" alt="Cherries" style="width:100%">
-                <h2>You can already test 3.10.0a1!</h2>
+                <h2><p style="color: #b77640">You can already test 3.10.0a1!</p></h2>
                 <p style="font-family: Verdana,serif">
+                <p style="color: white">
                     <a href="https://hub.packtpub.com/python-3-9-0-is-now-available-and-you-can-already-test-3-10-0a1-from-python-insider/">Python
                         3.9.0 is now available, and you can already test 3.10.0a1!
                         from Python Insider...
-                    </a>
+                    </a></p>
             </div>
             <div class="w3-quarter">
                 {#4#}
                 <img src="https://cdn.lynda.com/course/786416/786416-637286263889326221-16x9.jpg"
                      alt="Pasta and Wine" style="width:110%">
-                <h2>Python in Visual Studio</h2>
+                <h2><p style="color: #b77640">Python in Visual Studio</p></h2>
                 <p style="font-family: Verdana,serif">
+                <p style="color: white">
                     <a href="https://hub.packtpub.com/microsoft-releases-the-python-language-server-in-visual-studio/">Microsoft
-                        releases the Python Language Server in Visual Studio...</a>
+                        releases the Python Language Server in Visual Studio...</a></p>
             </div>
         </div>
         <!-- Second Photo Grid-->
@@ -65,31 +69,36 @@
                 {#5#}
                 <img src="https://images.idgesg.net/images/article/2019/10/cio_cw_woman_carefully_studying_survey_data_analysis_information_by_laurence_dutton_gettyimages-1129342100_2400x1600-100815759-large.jpg"
                      alt="Popsicle" style="width:100%">
-                <h2>7 superb Python books for every skill level</h2>
+                <h2><p style="color: #b77640">7 superb Python books for every skill level</p></h2>
                 <p style="font-family: Verdana,serif">
+                <p style="color: white">
                     <a href="https://www.python.org/">Whether
                         you’re a beginner, a moderately skilled dev, or an expert,
-                        there’s a book in this lineup to expand your Python programming powers...</a>
+                        there’s a book in this lineup to expand your Python programming powers...</a></p>
             </div>
             <div class="w3-quarter">
                 {#6#}
                 <img src="https://i.morioh.com/9b0ec7c8e7.png" alt="Salmon" style="width:100%">
-                <h3>Netflix open-sources Metaflow, its Python framework for building and managing data science
-                    projects</h3>
+                <h3><p style="color: #b77640">Netflix open-sources Metaflow, its Python framework for building and
+                    managing data science
+                    projects</p></h3>
                 <p style="font-family: Verdana,serif">
+                <p style="color: white">
                     <a href="https://hub.packtpub.com/netflix-open-sources-metaflow-its-python-framework-for-building-and-managing-data-science-projects/">Yesterday,
                         the Netflix team announced to open-source Metaflow, a Python library that
-                        helps scientists and engineers build and...</a>
+                        helps scientists and engineers build and...</a></p>
             </div>
             <div class="w3-quarter">
                 {#7#}
                 <img src="https://i1.wp.com/datascienceunlimited.tech/wp-content/uploads/2019/10/IMG_E97DF1FD224F-1.jpeg?fit=1024%2C668&ssl=1"
                      alt="Sandwich" style="width:100%">
-                <h3>How to perform exception handling in Python with ‘try, catch and finally’</h3>
+                <h3><p style="color: #b77640">How to perform exception handling in Python with ‘try, catch and
+                    finally’</p></h3>
                 <p style="font-family: Verdana,serif">
+                <p style="color: white">
                     <a href="https://hub.packtpub.com/how-to-perform-exception-handling-in-python-with-try-catch-and-finally/">An
                         integral part of using Python involves the art of handling
-                        exceptions. There are primarily two types of...</a>
+                        exceptions. There are primarily two types of...</a></p>
             </div>
             <div class="w3-quarter">
                 {#8#}
