--- a/python_blog/blog/templates/blog/post_detail.html
+++ b/python_blog/blog/templates/blog/post_detail.html
@@ -19,6 +19,8 @@
             <p class="article-content">{{ object.content }}</p>
         </div>
     </article>
+    {% block python_tricks %}{% endblock %}
+
 {% endblock %}
 
 
