--- a/python_blog/blog/templates/blog/user_posts.html
+++ b/python_blog/blog/templates/blog/user_posts.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-    <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
+    <h2 class="mb-3" style="color: white">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h2>
     {% for post in posts %}
         <article class="media content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}">
@@ -42,6 +42,7 @@
         {% endif %}
 
     {% endif %}
+    {% block python_tricks %}{% endblock %}
 {% endblock %}
 
 
