--- a/python_blog/users/templates/users/logout.html
+++ b/python_blog/users/templates/users/logout.html
@@ -1,11 +1,13 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h2>You have been logged out</h2>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            <a href="{% url 'login' %}">Log In Again</a>
-        </small>
-    </div>
+    <h2 style="color: white">You have been logged out
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                <a href="{% url 'login' %}">Log In Again</a>
+            </small>
+        </div>
+    </h2>
+    {% block python_tricks %}{% endblock %}
 
 {% endblock content %}
