--- a/python_blog/users/templates/users/password_reset.html
+++ b/python_blog/users/templates/users/password_reset.html
@@ -5,13 +5,16 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Blog Post</legend>
+                <legend class="border-bottom mb-4">Reset Password</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Post</button>
+                <button class="btn btn-outline-info" type="submit">Request Password Reset</button>
             </div>
         </form>
     </div>
     {% block python_tricks %}{% endblock %}
+
 {% endblock content %}
+
+
