--- a/python_blog/blog/static/blog/main.css
+++ b/python_blog/blog/static/blog/main.css
@@ -39,7 +39,7 @@ ul {
 
 
 .content-section {
-    background: #e3dede;
+    background: #e0d6d6;
     padding: 10px 20px;
     border: 0 solid #e0d6d6;
 
